Fix duplicate prebuilt indexes with and without postpended md5 (#2413)